--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
                       </ul>
                     </div>
                   </div>
+
+
                 </div>
               </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-danger text-center">
+            <button type="button" class="btn btn-danger">
               Place Order
             </button>
           </div>
@@ -161,9 +163,8 @@
         var value = parseInt($('#epic').children('option:selected').val())
         var result = quantity * value;
         result +=200;
-       
-        $("#can-price").html("Order total: " + result)
-        
+        if (isNaN(number)) number = 0; 
+        $("#can-price").html("Order total: " + result)        
       })
     </script>
 
